Fix misaligned buttons

--- a/app/assets/stylesheets/pages/my-track/modals.scss
+++ b/app/assets/stylesheets/pages/my-track/modals.scss
@@ -62,6 +62,7 @@
         border-top: 1px solid #ddd;
         padding-top: 20px;
 
+
         @include font-size(13, 16);
         text-align:center;
         a {
@@ -70,12 +71,13 @@
     }
     p strong { font-weight:500 }
     .buttons {
+        text-align:center;
         .pure-button {
             display:inline-block;
             width:100%;
-            margin-bottom:20px;
+            margin-bottom:10px;
             @include width-medium() {
-                width:auto;
+                width:48%;
                 margin-bottom:0;
             }
             border:1px solid $color-1;
@@ -92,7 +94,6 @@
     .main-section {
         //display:none;
     }
-
     .start-section {
         display:none;
         .get-started-button {
@@ -134,7 +135,6 @@
         margin: 0 auto;
 
         display:inline-block;
-        width:auto;
         border:1px solid $color-1;
         padding: 10px 13px;
         font-weight:$regular;
